Add buffer delete feature (#189)
