# server/Common/Api/Errors.cs
@@ -6,7 +6,9 @@ namespace Tyger.Common.Api;
 public static class Responses
 {
     public static IResult NotFound() => Results.NotFound(new ErrorBody("NotFound", "The resource was not found"));
-    public static IResult BadRequest(string code, string message) => Results.BadRequest(new ErrorBody(code, message));
+    public static IResult BadRequest(string message) => Results.BadRequest(new ErrorBody("BadRequest", message));
+    public static IResult InvalidRoute(string message) => Results.BadRequest(new ErrorBody("InvalidRoute", message));
+    public static IResult PreconditionFailed(string message) => Results.Json(new ErrorBody("PreconditionFailed", message), statusCode: StatusCodes.Status412PreconditionFailed);
 }
 
 public record ErrorBody
